--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "modernizr": "~2.6.2",
     "jquery": "~1.11.0",
     "normalize.css": "~3.0.1",
-    "font-awesome": "~4.1.0"
+    "font-awesome": "~4.1.0",
+    "jquery-waypoints": "~2.0.5"
   },
   "devDependencies": {}
 }
