--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "jquery": "~1.11.0",
     "normalize.css": "~3.0.1",
     "font-awesome": "~4.1.0",
-    "jquery-waypoints": "~2.0.5"
+    "jquery-waypoints": "~2.0.5",
+    "skrollr": "~0.6.25"
   },
   "devDependencies": {}
 }
