--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "modernizr": "~2.6.2",
     "normalize.css": "~3.0.1",
     "jquery-waypoints": "~2.0.5",
-    "skrollr": "~0.6.25"
+    "skrollr": "~0.6.25",
+    "viewport-units-buggyfill": "~0.4.1"
   },
   "devDependencies": {}
 }
